elia modif emplois

--- a/emplois.css
+++ b/emplois.css
@@ -69,6 +69,14 @@ body {
     margin-bottom: 20px;
 }
 
+.jobs h3 {
+    
+    font-size: 35px;
+    color: #1e73be;
+    margin-bottom: 20px;
+}
+
+
 .jobs section {
     margin-bottom: 20px;
 }
