--- a/emplois.css
+++ b/emplois.css
@@ -110,3 +110,15 @@ body {
     margin: 5px 0;
     color: #555;
 }
+.favorite-button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 1.5rem;
+    color: gray;
+}
+
+.favorite-button.favorite {
+    color: gold;
+}
+
