--- a/emplois.css
+++ b/emplois.css
@@ -165,19 +165,24 @@ li {
     border-radius: 5px;
 }
 
-/* Notification styles */
 .notification {
     position: fixed;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: #28a745;
+    top: 20px;
+    right: 20px;
+    background-color: #4caf50; /* Vert pour succès */
     color: white;
-    padding: 10px 20px;
+    padding: 15px;
     border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     z-index: 1000;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
 }
+
+.notification.show {
+    opacity: 1;
+}
+
 
 /* Favorite button styles */
 .favorite-button {
