--- a/emplois.css
+++ b/emplois.css
@@ -13,7 +13,7 @@ body {
     padding: 20px;
     background-color: white;
     box-shadow: 0 0 10px #1e73be;
-    max-width: 1200px; /* Augmenté pour permettre plus de contenu côte à côte */
+    max-width: 1200px;
 }
 
 /* Header styles */
@@ -178,19 +178,24 @@ li {
     border-radius: 5px;
 }
 
+/* Notification styles */
 .notification {
     position: fixed;
-    top: 20px;
-    right: 20px;
-    background-color: #4caf50; /* Vert pour succès */
+    bottom: 20px; /* Position basse de l'écran */
+    left: 50%; /* Centrage horizontal */
+    transform: translateX(-50%); /* Centrage horizontal */
+    background-color: #4caf50; /* Couleur verte */
     color: white;
-    padding: 15px;
+    padding: 10px; /* Espace intérieur */
     border-radius: 5px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     z-index: 1000;
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
+    font-size: 14px;
+    max-width: 200px;
 }
+
 
 .notification.show {
     opacity: 1;
