--- a/carousel.css
+++ b/carousel.css
@@ -1,41 +1,51 @@
-.carousel {
-    position: relative;
-    max-width: 100%;
-    margin: auto;
-    overflow: hidden;
-}
-
-.carousel-images {
+body {
+    margin: 0;
+    padding: 0;
     display: flex;
-    transition: transform 0.5s ease-in-out;
-}
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    flex-direction: column;
+  }
 
-.carousel-images img {
-    width: 100%;
-    height: auto;
-}
+  .banniere {
+    background-color: #ADD8E6;
+    padding: 10px; 
+    border-radius: 10px;
+    margin-bottom: 20px;
+  }
 
-.carousel-prev, .carousel-next {
+  #carrousel {
+    position: relative;
+    height: 400px;
+    width: 700px;
+    margin: auto;
+    overflow: hidden; 
+  }
+
+  #carrousel ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  #carrousel ul li {
     position: absolute;
-    top: 50%;
-    width: auto;
-    padding: 10px;
-    margin-top: -22px;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    cursor: pointer;
-    user-select: none;
-}
-
-.carousel-prev {
+    top: 0;
     left: 0;
-}
+    display: none; 
+  }
 
-.carousel-next {
-    right: 0;
-}
+  h1 {
+    text-align: center;
+  }
 
-.carousel-prev:hover, .carousel-next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-}
+  .boutons {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+  }
+
+  button {
+    margin: 0 5px;
+  }
