--- a/accueil.css
+++ b/accueil.css
@@ -72,3 +72,14 @@ body {
     font-size: 16px;
     color: #1e73be;
 }
+
+.banner {
+    display: none; 
+    text-align: center;
+    margin: 20px 0;
+}
+
+.banner img {
+    max-width: 100%;
+    height: auto;
+}
