--- a/emplois.css
+++ b/emplois.css
@@ -89,6 +89,12 @@ body {
     flex: 2;
 }
 
+/* Specific h1 styles for left-panel and right-panel */
+.left-panel h1,
+.right-panel h1 {
+    color: blue; /* Set the color to blue */
+}
+
 .jobs h1 {
     text-align: center;
     font-size: 35px;
@@ -128,12 +134,12 @@ body {
 .jobs ul li h3 {
     font-size: 20px;
     margin: 0 0 5px 0;
-    color: #333;
+    color: #1e73be;
 }
 
 .jobs ul li p {
     margin: 5px 0;
-    color: #555;
+    color: #1e73be;
 }
 
 /* Form styles */
@@ -171,6 +177,7 @@ ul {
 }
 
 li {
+    color :#0056b3;
     background-color: #f9f9f9;
     padding: 10px;
     margin-top: 10px;
@@ -178,44 +185,8 @@ li {
     border-radius: 5px;
 }
 
-/* Notification styles */
-.notification {
-    position: fixed;
-    bottom: 20px; /* Position basse de l'écran */
-    left: 50%; /* Centrage horizontal */
-    transform: translateX(-50%); /* Centrage horizontal */
-    background-color: #4caf50; /* Couleur verte */
-    color: white;
-    padding: 10px; /* Espace intérieur */
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    z-index: 1000;
-    opacity: 0;
-    transition: opacity 0.5s ease-in-out;
-    font-size: 14px;
-    max-width: 200px;
-}
-
-
 .notification.show {
     opacity: 1;
-}
-
-/* Favorite button styles */
-.favorite-button {
-    background: white;
-    border: 1px solid gray;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 1.5rem;
-    color: gray;
-    padding: 5px 10px;
-    transition: background-color 0.3s, color 0.3s;
-}
-
-.favorite-button.active {
-    background: yellow;
-    color: white;
 }
 
 /* Heading styles */
